--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZUBA</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">" 
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <script src="js/jquery-1.11.3.js"></script>
   <script src="js/scripts.js"></script>
+  <title>ZUBA</title>
 </head>
 <body>
-    
+  
 </body>
 </html>
