--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <title>ZUBA</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="title">
+      <h2 class="text-center">Items Order Form</h2>
+    </div>
+    <div class="d-flex">
+      <form action="" method="">
+        
 </body>
 </html>
