--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     </div>
     <div class="d-flex">
       <form action="" method="">
-        
+        <label class="h2">Choose your suitable/affordable Bouquet</label>
+        <select class="custom-select custom-select-md mb-3" id="size" required>
+          <option value="Unique bouquet">Unique $5000</option>
+          <option value="Classic bouquet">Classique $2500</option>
+          <option value="Basic bouquet">Basic @ $1000-$500</option>
+        </select>
+        </label>
 </body>
 </html>
