add available flowers for decor

--- a/index.html
+++ b/index.html
@@ -46,5 +46,18 @@
         <option value="Basic ">Double Breasted Suit</option>
 
       </select>
+      <label class="h2">pick you favourite flowers</label>
+        <select class="custom-select custom-select-md mb-3" id="flowers" required>
+          <option value="flowers">1.Roses</option>
+          <option value="flowers">2.Jasmin</option>
+          <option value="flowers">3.Tulips</option>
+          <option value="flowers">4.Calla lilies</option>
+          <option value="flowers">5.Lyses de la vallee</option>
+          <option value="flowers">6.Peony</option>
+          <option value="flowers">7.Ranunculus</option>
+          <option value="flowers">8.stephanotis</option>
+          <option value="flowers">9.Sweetpeas</option>
+          <option value="flowers">10.Gardenia</option>
+        </select>
 </body>
 </html>
