add heading elements cdata

--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
           <option value="flowers">9.Sweetpeas</option>
           <option value="flowers">10.Gardenia</option>
         </select>
+        <h2 class="text-center">Please provide your details</h2>
 </body>
 </html>
