add label for customer name

--- a/index.html
+++ b/index.html
@@ -60,5 +60,9 @@
           <option value="flowers">10.Gardenia</option>
         </select>
         <h2 class="text-center">Please provide your details</h2>
+        <label>
+          <span class="fname">First Name <span class="required">*</span></span>
+          <input type="text" name="fname">
+        </label>
 </body>
 </html>
