add label for customer address

--- a/index.html
+++ b/index.html
@@ -64,5 +64,14 @@
           <span class="fname">First Name <span class="required">*</span></span>
           <input type="text" name="fname">
         </label>
+        <label>
+          <span class="lname">Last Name <span class="required">*</span></span>
+          <input type="text" name="lname">
+        </label>
+
+        <label>
+          <span>Street Address <span class="required">*</span></span>
+          <input type="text" name="houseadd" placeholder="House number and street name" required>
+        </label>
 </body>
 </html>
