add label for customer phone, street,county,and email

--- a/index.html
+++ b/index.html
@@ -73,5 +73,21 @@
           <span>Street Address <span class="required">*</span></span>
           <input type="text" name="houseadd" placeholder="House number and street name" required>
         </label>
+        <label>
+          <span>Town / City <span class="required">*</span></span>
+          <input type="text" name="city">
+        </label>
+        <label>
+          <span>State / County <span class="required">*</span></span>
+          <input type="text" name="city">
+        </label>
+        <label>
+          <span>Phone <span class="required">*</span></span>
+          <input type="tel" name="city">
+        </label>
+        <label>
+          <span>Email Address <span class="required">*</span></span>
+          <input type="email" name="city">
+        </label>
 </body>
 </html>
