add button for delivry

--- a/index.html
+++ b/index.html
@@ -89,5 +89,14 @@
           <span>Email Address <span class="required">*</span></span>
           <input type="email" name="city">
         </label>
+      </form>
+    </div>
+    <br>
+    <div class="col-sm-3"></div>
+    <div class=" text-center">
+      <button class='deliver'>Make Delivery</button>
+      <button class='delivernot'>Pick Up</button>
+    </div>
+  </div>
 </body>
 </html>
