--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
       </label>
       <label class="h2">Available clothes</label>
       <select class="custom-select custom-select-md mb-3" id="bouquet" required>
-        <option value="Unique bouquet">Bodycon dress.</option>
-        <option value="Unique bouquet">Slip dress.</option>
-        <option value="Classic bouquet">Skater dress</option>
-        <option value="Basic bouquet">Maxi dress.</option>
-        <option value="Basic bouquet">Bardot dress</option>
-        <option value="Basic bouquet">Sheath dress</option>
-        <option value="Basic bouquet">Pinafore dress</option>
-        <option value="Basic bouquet">Mermaid dress.
+        <option value="dresses">Bodycon dress.</option>
+        <option value="dresses">Slip dress.</option>
+        <option value="dresses">Skater dress</option>
+        <option value="dresses">Maxi dress.</option>
+        <option value="dresses">Bardot dress</option>
+        <option value="dresses">Sheath dress</option>
+        <option value="dresses">Pinafore dress</option>
+        <option value="dresses">Mermaid dress.
         </option>
-        <option value="basic">Slim Fit Suit</option>
-        <option value="Basic">Classic Fit Suit</option>
-        <option value="Basic">Notch Lapel</option>
-        <option value="basic">Modern fit suit</option>
-        <option value="Basic">Shawl Lapel</option>
-        <option value="Basic">Peak Lapel</option>
-        <option value="Basic ">Single Breasted Suit</option>
-        <option value="Basic ">Double Breasted Suit</option>
+        <option value="suits">Slim Fit Suit</option>
+        <option value="suits">Classic Fit Suit</option>
+        <option value="suits">Notch Lapel</option>
+        <option value="suits">Modern fit suit</option>
+        <option value="suits">Shawl Lapel</option>
+        <option value="suits">Peak Lapel</option>
+        <option value="suits">Single Breasted Suit</option>
+        <option value="suits">Double Breasted Suit</option>
 
       </select>
       <label class="h2">pick you favourite flowers</label>
