add contact us form

--- a/Marah.html
+++ b/Marah.html
@@ -98,5 +98,17 @@
       <button class='delivernot'>Pick Up</button>
     </div>
   </div>
+</div>
+<form class="form">
+  <h2 class="text-center white-text">CONTACT US</h2>
+  <p type="Name:"><input placeholder="Write your name here.."></input></p>
+  <p type="Email:"><input placeholder="Let us know how to contact you back.."></input></p>
+  <p type="Message:"><input placeholder="What would you like to tell us.."></input></p>
+  <button class='deliver'>Send Message</button> <br><br>
+  <div>
+    <span class="fa"></span>Tel: +250789020633 <br>
+    <a href="#email">contact@Zuba_decor.com"</a> <br>
+  </div>
+</form>
 </body>
 </html>
