--- a/bouquet.html
+++ b/bouquet.html
@@ -14,9 +14,21 @@
 </head>
 
 <body>
+    <div id="navigation">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="bouquet.html">bouquet</a></li>
+                <li><a href="Marah.html">Order</a></li>
+                <!-- <li><a href="story.html">our story</a></li>
+                <li><a href="contacts.html"> Contact us</a></li> -->
+                </ul>
+                </nav>
+                </div>
+                
    <a href="unique-bouquet.html">unique </a><br>
    <a href="classic.html">classic</a><br>
-   <a href="basic.html">basic</a>
+   <a href="basic.html">basic</a> 
 
    
         <section class="bouquet">
