--- a/bouquet.html
+++ b/bouquet.html
@@ -33,7 +33,7 @@
    
         <section class="bouquet">
             <h3 > Our Bouquet lists</h3>
-            <div class="row container">
+            <div class="row ">
                 <div class="card-deck col-md-10">
     
                     <div class="card">
